@startuml
class Compra {
- double precioFinal
+ <<Create>> Compra(Cliente,Vendedor)
+ double getPrecioFinal()
+ void setPrecioFinal(double)
+ void agregarAlCarrito(ObjetoVendible)
+ void generarTicket(String,int,int)
}
class Reserva {
+ <<Create>> Reserva(Cliente,Vendedor,ObjetoVendible)
+ void agregarReserva(ObjetoVendible)
}
class Cliente {
- String nombre
- ArrayList<ObjetoVendible> objetoVendibles
+ <<Create>> Cliente(String)
+ String getNombre()
+ void setNombre(String)
+ ArrayList<ObjetoVendible> getObjetoVendibles()
+ void setObjetoVendibles(ArrayList<ObjetoVendible>)
}
class ObjetoVendible {
- double precioLista
- String nombre
- Reserva reserva
- Compra compra
+ <<Create>> ObjetoVendible(double,String)
+ double getPrecioLista()
+ void setPrecioLista(double)
+ String getNombre()
+ void setNombre(String)
+ Reserva getReserva()
+ void setReserva(Reserva)
+ Compra getCompra()
+ void setCompra(Compra)
}
class Transaccion {
- Cliente cliente
- Vendedor vendedor
- ArrayList<ObjetoVendible> vendibles
+ <<Create>> Transaccion(Cliente,Vendedor)
+ Cliente getCliente()
+ void setCliente(Cliente)
+ Vendedor getVendedor()
+ void setVendedor(Vendedor)
+ ArrayList<ObjetoVendible> getVendibles()
+ void setVendibles(ArrayList<ObjetoVendible>)
+ void agregarVendible(ObjetoVendible)
}
class Vendedor {
- String nombre
- ArrayList<ObjetoVendible> objetoVendibles
+ <<Create>> Vendedor(String)
+ String getNombre()
+ void setNombre(String)
+ ArrayList<ObjetoVendible> getObjetoVendibles()
+ void setObjetoVendibles(ArrayList<ObjetoVendible>)
}
class Main {
+ {static} void main(String[])
}


Transaccion <|-- Compra
Transaccion <|-- Reserva
@enduml